Ajout des nouvelles fonctionnalités