@@ -1,104 +1,65 @@
 package ma.emsi.testautomation.service;
 
-import jakarta.annotation.PostConstruct;
-import ma.emsi.testautomation.entity.ScenarioExecutionLog;
 import ma.emsi.testautomation.entity.scenario;
-import ma.emsi.testautomation.entity.step;
-import ma.emsi.testautomation.repository.ScenarioExecutionLogRepository;
-import ma.emsi.testautomation.registry.WebServiceRegistry;
-import org.springframework.beans.factory.annotation.Autowired;
+import ma.emsi.testautomation.entity.ScenarioExecutionLog;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.*;
 
 @Service
 public class ScenarioService {
 
-    @Autowired
-    private ScenarioExecutionLogRepository logRepository;
-
-    @Autowired
-    private WebServiceRegistry webServiceRegistry;
-
     private final Map<String, List<scenario>> scenarioMap = new HashMap<>();
+    private final List<ScenarioExecutionLog> executionLogs = new ArrayList<>();
 
-    @PostConstruct
-    public void initScenarios() {
-        scenarioMap.put("authentication-service", List.of(
-                new scenario("Création Abonné Standard", List.of(
-                        new step("Endpoint", "CreateSubscriber"),
-                        new step("Méthode", "POST"),
-                        new step("Validation", "Email & Phone"),
-                        new step("Timeout", "5000ms"),
-                        new step("Retry", "3x")
-                )),
-                new scenario("Vérification Abonné", List.of(
-                        new step("Endpoint", "VerifySubscriber"),
-                        new step("Méthode", "GET"),
-                        new step("Headers", "Authorization Bearer"),
-                        new step("Timeout", "3000ms")
-                ))
-        ));
+    // Sauvegarder un scénario (ajoute à la liste par clé)
+    public void saveScenario(scenario s) {
+        scenarioMap.computeIfAbsent(s.getServiceKey(), k -> new ArrayList<>()).add(s);
     }
 
+    // 1. Récupérer tous les scénarios par serviceKey
     public List<scenario> getScenariosByService(String serviceKey) {
-        return scenarioMap.getOrDefault(serviceKey, List.of());
+        return scenarioMap.getOrDefault(serviceKey, Collections.emptyList());
     }
 
+    // 2. Exécuter un scénario par index
     public String executeScenario(String serviceKey, int index) {
-        List<scenario> scenarios = scenarioMap.get(serviceKey);
-        if (scenarios == null || index < 0 || index >= scenarios.size()) {
-            return "❌ Scénario non trouvé.";
+        List<scenario> list = getScenariosByService(serviceKey);
+        if (index < 0 || index >= list.size()) {
+            return "❌ Index invalide pour le service : " + serviceKey;
         }
 
-        scenario selected = scenarios.get(index);
-        StringBuilder result = new StringBuilder();
-        result.append("📋 Scénario : ").append(selected.getName()).append("\n");
+        scenario s = list.get(index);
+        // Ici tu peux exécuter chaque WebService dans le scénario s.getSteps()
+        // Exemple : pour (String step : s.getSteps()) { ... }
 
-        for (step step : selected.getsteps()) {
-            result.append("➡️ Étape : ").append(step.getKey()).append(" => ").append(step.getValue()).append("\n");
-
-            if ("Endpoint".equalsIgnoreCase(step.getKey())) {
-                String serviceName = step.getValue();
-                WebServiceExecutor webService = webServiceRegistry.getWebService(serviceName);
-
-                if (webService != null) {
-                    // 💡 Paramètres simulés
-                    Map<String, Object> params = new HashMap<>();
-                    params.put("msisdn", "212600000000");
-                    params.put("operationId", UUID.randomUUID().toString());
-                    params.put("timestamp", LocalDateTime.now());
-
-                    String executionResult = webService.execute(params);
-
-                    result.append("✅ Exécution [").append(serviceName).append("] : ")
-                            .append(executionResult).append("\n");
-                } else {
-                    result.append("❌ WebService non trouvé : ").append(serviceName).append("\n");
-                }
-            }
-        }
-
-        // 💾 Journaliser l'exécution
+        // Log
         ScenarioExecutionLog log = new ScenarioExecutionLog();
-        log.setScenarioName(selected.getName());
-        log.setServiceKey(serviceKey);
-        log.setScenarioIndex(index);
-        log.setResult(result.toString());
-        log.setExecutionTime(LocalDateTime.now());
+        log.setScenarioName(s.getName());
+        log.setExecutionTime(new Date());
+        log.setStatus("SUCCESS"); // ou "FAILED" selon exécution
 
-        logRepository.save(log);
+        executionLogs.add(log);
 
-        return result.toString();
+        return "✅ Scénario exécuté avec succès : " + s.getName();
     }
 
+    // 3. Lister toutes les clés des services
     public Set<String> getAllServiceKeys() {
-        return scenarioMap.keySet();  // retourne toutes les clés (noms de services)
+        return scenarioMap.keySet();
     }
 
+    // 4. Récupérer tous les logs d'exécution
     public List<ScenarioExecutionLog> getAllExecutionLogs() {
-        return logRepository.findAll();  // retourne tous les logs depuis la BDD
+        return executionLogs;
+    }
+
+    public List<scenario> getscenariosByService(String serviceKey) {
+        return null;
+    }
+
+    public String executescenario(String serviceKey, int index) {
+        return null;
     }
 
 }
